@@ -2,10 +2,8 @@ package mServer.tool;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import de.mediathekview.mlib.tool.Log;
 
@@ -22,7 +20,7 @@ public class HashFileWriter {
 	 * @param baseDirPath Der Pfad zum Verzeichnis in das geschrieben werden soll.
 	 */
 	public HashFileWriter(String baseDirPath) {
-		baseDir = Paths.get(baseDirPath);
+		baseDir = Path.of(baseDirPath);
 	}
 
 	/**
@@ -30,7 +28,7 @@ public class HashFileWriter {
 	 * @param id Die zu schreibende ID.
 	 */
 	public void writeHash(String id) {
-		try (BufferedWriter fileWriter = Files.newBufferedWriter(baseDir.resolve(FILE_NAME), StandardCharsets.UTF_8)) {
+		try (BufferedWriter fileWriter = Files.newBufferedWriter(baseDir.resolve(FILE_NAME))) {
 			fileWriter.write(id);
 		} catch (IOException ioException) {
 			Log.errorLog(494461668, ioException, "Der Filmlisten Hash konnte nicht geschrieben werden.");
