@@ -22,13 +22,15 @@ package mServer.upload;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 
 import mServer.daten.MserverDatenUpload;
 import mServer.tool.MserverLog;
 
 public class MserverCopy {
+    private MserverCopy() {
+    }
 
     public static boolean copy(String srcPathFile, String destFileName, MserverDatenUpload datenUpload) {
         boolean ret = false;
@@ -55,18 +57,18 @@ public class MserverCopy {
         MserverLog.systemMeldung("dest: " + destPathFile);
         try {
 
-            String dest_tmp = destPathFile + "__";
-            String dest_old = destPathFile + "_old";
+            String destTmp = destPathFile + "__";
+            String destOld = destPathFile + "_old";
             MserverLog.systemMeldung("Copy Filmliste (rename): " + destPathFile);
-            Files.copy(Paths.get(srcPathFile), Paths.get(dest_tmp), StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(Path.of(srcPathFile), Path.of(destTmp), StandardCopyOption.REPLACE_EXISTING);
 
-            if (Files.exists(Paths.get(destPathFile), LinkOption.NOFOLLOW_LINKS)) {
+            if (Files.exists(Path.of(destPathFile), LinkOption.NOFOLLOW_LINKS)) {
                 // wenns die Datei schon gibt, umbenennen, ist der Normalfall
-                MserverLog.systemMeldung("Rename alte Filmliste: " + dest_tmp);
-                Files.move(Paths.get(destPathFile), Paths.get(dest_old), StandardCopyOption.REPLACE_EXISTING);
+                MserverLog.systemMeldung("Rename alte Filmliste: " + destTmp);
+                Files.move(Path.of(destPathFile), Path.of(destOld), StandardCopyOption.REPLACE_EXISTING);
             }
             MserverLog.systemMeldung("Rename neue Filmliste: " + destPathFile);
-            Files.move(Paths.get(dest_tmp), Paths.get(destPathFile), StandardCopyOption.REPLACE_EXISTING);
+            Files.move(Path.of(destTmp), Path.of(destPathFile), StandardCopyOption.REPLACE_EXISTING);
 
             MserverLog.systemMeldung("====================================");
         } catch (Exception ex) {
