@@ -5,7 +5,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -15,7 +14,7 @@ public class TestFileReader {
     public static String readFile(String filePath) {
         try {
             URI u = TestFileReader.class.getResource(filePath).toURI();
-            Path path = Paths.get(u);
+            Path path = Path.of(u);
             return new String(Files.readAllBytes(path));
         } catch(IOException | URISyntaxException ex) {
             fail("Exception reading file " + filePath + ": " + ex.getMessage());
